--- a/.github/workflows/e2eTests.yml
+++ b/.github/workflows/e2eTests.yml
@@ -35,7 +35,7 @@ jobs:
           name: Windows_Edge_Local_Summary
           path: "execution-summary/ExecutionSummaryReport_*.html"
       - name: Publish Test Report
-      - uses: actions/upload-artifact@v2  # upload test results
+        uses: actions/upload-artifact@v2  # upload test results
         if: success() || failure()        # run this step even if previous step failed
         with:
           name: test-results
