--- a/.github/workflows/e2eTests.yml
+++ b/.github/workflows/e2eTests.yml
@@ -35,8 +35,7 @@ jobs:
           name: Windows_Edge_Local_Summary
           path: "execution-summary/ExecutionSummaryReport_*.html"
       - name: Publish Test Report
-        uses: actions/upload-artifact@v2  # upload test results
-        if: success() || failure()        # run this step even if previous step failed
+        uses: mikepenz/action-junit-report@v3
+        if: success() || failure() # always run even if the previous step fails
         with:
-          name: test-results
-          path: target/surefire-reports/TEST-*.xml
+          report_paths: 'target/surefire-reports/TEST-*.xml'
